This is the first commit of my website.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/padthai.html"></a>
+        <a href="../odin-recipes/recipes/padthai.html">Pad Thai</a>
     </body>
 </html>
